whitespacing fixed style changes

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,6 +1,13 @@
 * {
   font-family: automate, sans-serif;
 }
+html,
+body {
+  overflow-x: hidden;
+}
+body {
+  position: relative;
+}
 .homepage {
   background-image: url("../src/images/about/Sonolo.jpg");
   background-size: cover;
@@ -12,7 +19,6 @@
 .contact,
 .lastSection {
   height: 100vh;
-  width: 100%;
 }
 .about {
   position: relative;
@@ -143,8 +149,7 @@ h6 {
   .homepage,
   .about,
   .projects,
-  .contact,
-  .lastSection {
+  .contact {
     height: auto;
   }
   .myName {
